2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.8.7

2010-01-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12341: Image generation broken with PHPs safe_mode activated and GraphicsMagick (Thanks to Marcus Krause, Helmut Hummel and Bernhard Kraft)

2010-01-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13096: Unable to disable thumbnails with thumbnailsByDefault (Thanks to Steffen Gebert)
	* Fixed bug #13118: Toggle empty tree produces JS error (Thanks to Felix Oertel)
	* Fixed bug #12946: t3lib_div::readLLfile use debug output

2010-01-04  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12506: JSMENU does not respect mount point overlays (Thanks to Joerg Wagner)

2010-01-03  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13095: Massuploader: Max file size is shown in KB (Thanks to Steffen Gebert)

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.2 to 1.0.3

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12855: t3lib/class.t3lib_page.php generates invalid queries for DBAL
	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement

2009-12-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #13100: Scheduler: Undefined enableBELog configuration option causes warnings

2009-12-26  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12807: Bug: CSS issues with buttons (Recycler / File Mass Uploader) (Thanks to Andreas Kundoch and Helmut Hummel)

2009-12-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13080: Uncheck function in tceforms unchecks too many items (Thanks to Georg Ringer)

2009-12-25  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5260: Function linkWrapFile() in file class.file_list.inc uses wrong PATH prefix

2009-12-23  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12987: List module: delete confirmation has extra ")" (Thanks to Steffen Gebert)