@@ -24,8 +24,8 @@
 				<div class="t3-login-bottomBorder"></div>
 				<script type="text/javascript">
 				/*<![CDATA[*/
-					document.cookie = "testcookie";
-					cookieEnabled = (document.cookie.indexOf("testcookie") != -1) ? true : false;
+					document.cookie = "typo3-login-cookiecheck";
+					cookieEnabled = (document.cookie.indexOf("typo3-login-cookiecheck") != -1) ? true : false;
 					if (cookieEnabled) {
 						document.getElementById("t3-login-form-fields").style.display = 'block';
 					}
