@@ -1,3 +1,7 @@
+2010-01-08  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #12779: Previously selected type of backend login is now stored in a cookie (Thanks to Sebastian Gebhard)
+
 2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Updated htmlArea RTE version to 1.8.7
